# factor-model-backtesting-framework

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml
notebooks/: 01_factors_eda.ipynb  02_attribution.ipynb  03_strategy_backtest.ipynb  README.md
reports/: backtest_returns.csv  holdings_diagnostics.csv  oos_metrics.csv  portfolio_diagnostics.csv  regime_metrics.csv  research_report.md  rolling_strategy_carhart.csv  rolling_target_carhart.csv  sensitivity.csv  strategy_factor_attribution.csv  strategy_metrics.csv  summary.md  target_attribution.csv
src/: __init__.py  backtest.py  config.py  data.py  diagnostics.py  metrics.py  pipeline.py  plots.py  regressions.py  signals.py
tests/: test_diagnostics.py  test_metrics.py  test_regressions.py  test_signals_backtest.py
