[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "factor-model-backtesting-framework"
version = "0.1.0"
description = "Factor attribution and monthly equity momentum backtesting framework."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Ali Abousaeidi" }]
dependencies = [
    "numpy>=1.26,<3",
    "pandas>=2.2,<3",
    "pandas-datareader>=0.10,<0.11",
    "yfinance>=0.2.40,<0.3",
    "statsmodels>=0.14,<0.15",
    "scipy>=1.13,<2",
    "matplotlib>=3.8,<4",
    "seaborn>=0.13,<0.14",
    "requests>=2.31,<3",
    "tabulate>=0.9,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "ruff>=0.8,<1",
    "jupyter>=1.0,<2",
]
dashboard = [
    "streamlit>=1.40,<2",
]

[project.scripts]
factor-backtest = "src.pipeline:main"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 96
exclude = [
    ".git",
    ".venv",
    "data",
    "reports",
    "notebooks",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
